primer commit iniciando el proyecto

--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AdoptaUnTech</title>
+    <title>Adopta</title>
   </head>
   <body>
+    <h1>Adopta un tech</h1>
+    <hr>
+
+    
+
     <script type="module" src="/main.js"></script>
   </body>
 </html>
