--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Adopta</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Adopta Un Tech</a>
         <button
