--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <h1>Adopta un tech</h1>
     <hr>
 
-    
+    <footer>
+      <p>Adopta un tech - Todos los derechos 2024</p>
+    </footer>
 
     <script type="module" src="/main.js"></script>
   </body>
